--- a/furniture_Sales_Management/src/Interface/StaffList.form
+++ b/furniture_Sales_Management/src/Interface/StaffList.form
@@ -39,7 +39,7 @@
                   <Component id="filter" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" pref="286" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="283" max="32767" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -55,6 +55,9 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="tblworkers">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Century Gothic" size="14" style="0"/>
+            </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="5" rowCount="1">
                 <Column editable="false" title="ID" type="java.lang.String"/>
@@ -102,17 +105,23 @@
     </Container>
     <Component class="javax.swing.JLabel" name="title">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Century Gothic" size="14" style="0"/>
+        </Property>
         <Property name="horizontalAlignment" type="int" value="2"/>
         <Property name="text" type="java.lang.String" value="Staff List"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="filter">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Century Gothic" size="14" style="0"/>
+        </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="3">
             <StringItem index="0" value="Show all"/>
-            <StringItem index="1" value="Only officers"/>
-            <StringItem index="2" value="Only sales people"/>
+            <StringItem index="1" value="Officers"/>
+            <StringItem index="2" value="Sales people"/>
           </StringArray>
         </Property>
       </Properties>
