--- a/furniture_Sales_Management/src/Interface/MainPage.form
+++ b/furniture_Sales_Management/src/Interface/MainPage.form
@@ -110,6 +110,7 @@
                   </Group>
                   <Component id="Tabs" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
+                  <Component id="staffList2" min="-2" max="-2" attributes="0"/>
               </Group>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
@@ -194,6 +195,8 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LogoutBtnActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="Interface.StaffList" name="staffList2">
         </Component>
       </SubComponents>
     </Container>
